--- a/app/src/main/res/layout/header_user.xml
+++ b/app/src/main/res/layout/header_user.xml
@@ -14,7 +14,7 @@
             android:src="@drawable/ic_launcher_background"/>
 
     <TextView
-        android:id="@+id/profilo_utente"
+        android:id="@+id/headerUser_user"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/baloo"
@@ -23,6 +23,7 @@
         android:textSize="24sp" />
 
     <TextView
+        android:id="@+id/headerUser_email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/aclonica"
