--- a/app/src/main/res/layout/activity_pubblica_evento.xml
+++ b/app/src/main/res/layout/activity_pubblica_evento.xml
@@ -36,11 +36,11 @@
             app:layout_constraintVertical_bias="0.0"/>
 
     </androidx.appcompat.widget.Toolbar>
+
 <ScrollView
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginTop="80dp"
-    android:layout_marginBottom="10dp"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
@@ -53,7 +53,7 @@
         android:orientation="vertical">
 
             <ImageView
-                android:id="@+id/profile_image"
+                android:id="@+id/pubblica_eventImage"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:layout_gravity="center"
@@ -61,7 +61,7 @@
                 android:src="@mipmap/profile" />
 
             <EditText
-                android:id="@+id/nome_evento"
+                android:id="@+id/pubblica_eventName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -75,6 +75,7 @@
                 android:hint="Nome Evento" />
 
             <EditText
+                android:id="@+id/pubblica_informazione"
                 android:inputType="textMultiLine"
                 android:lines="4"
                 android:minLines="4"
@@ -99,7 +100,7 @@
                 android:textSize="16sp" />
 
             <EditText
-                android:id="@+id/editTextTextPersonName3"
+                android:id="@+id/pubblica_address"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -109,8 +110,13 @@
                 android:backgroundTint="@color/bottone_azzurro"
                 android:textColorHint="@color/bottone_azzurro"
                 android:textSize="16sp"
-                android:hint="Inserisci la via del locale" />
-
+                android:hint="Inserisci la via del locale"/>
+        <!-- Serve per l'autocompletamento
+            <fragment
+                android:id="@+id/autocomplete_fragment"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment" />
 
             <TextView
                 android:id="@+id/textView12"
@@ -123,7 +129,7 @@
                 android:text="Organizzatore:" />
 
             <EditText
-                android:id="@+id/textOrganizzatore"
+                android:id="@+id/pubblica_currentUser"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -134,6 +140,7 @@
                 android:ems="10"
                 android:hint="Nome Organizzatore"
                 android:inputType="text" />
+                -->
 
             <TextView
                 android:id="@+id/textView14"
@@ -146,7 +153,7 @@
                 android:fontFamily="@font/baloo"/>
 
             <TextView
-                android:id="@+id/dataEvento"
+                android:id="@+id/pubblica_eventDate"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -167,10 +174,11 @@
                 android:fontFamily="@font/baloo"/>
 
             <Spinner
-                android:id="@+id/generi_musicali"
+                android:id="@+id/pubblica_genereMusicale"
                 android:background="@color/sfondo_grigio"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content" />
+<!--
             <TextView
                 android:id="@+id/textView19"
                 android:layout_width="wrap_content"
@@ -182,7 +190,7 @@
                 android:textSize="16sp"/>
 
             <EditText
-                android:id="@+id/editTextNumber"
+                android:id="@+id/pubblica_capienza"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -192,10 +200,10 @@
                 android:backgroundTint="@color/bottone_azzurro"
                 android:textColorHint="@color/bottone_azzurro"
                 android:inputType="number" />
-
+-->
 
             <CheckBox
-                android:id="@+id/ingaggioCantanteVisible"
+                android:id="@+id/pubblica_singerVisibleChecked"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -204,9 +212,8 @@
                 android:textSize="16sp"
                 android:text="Ho già ingaggiato un cantante" />
 
-
             <TextView
-                android:id="@+id/visibleCantanteText"
+                android:id="@+id/pubblica_visibleCantanteLabel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -216,7 +223,7 @@
                 android:fontFamily="@font/baloo"/>
 
             <EditText
-                android:id="@+id/visibleCantanteInput"
+                android:id="@+id/pubblica_visibleCantanteInput"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -229,7 +236,7 @@
                 android:hint="cantante" />
 
         <Button
-            android:id="@+id/button4"
+            android:id="@+id/pubblica_buttonPubblica"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/button_style"
