--- a/app/src/main/res/layout/lista_item.xml
+++ b/app/src/main/res/layout/lista_item.xml
@@ -10,8 +10,8 @@
     
         <ImageView
             android:id="@+id/img_anteprima"
-            android:layout_width="117dp"
-            android:layout_height="124dp"
+            android:layout_width="137dp"
+            android:layout_height="144dp"
             android:src="@mipmap/profile"/>
         <TextView
             android:id="@+id/titolo"
@@ -22,26 +22,55 @@
             android:layout_alignParentEnd="true"
             android:layout_toRightOf="@+id/img_anteprima"
             android:layout_toEndOf="@id/img_anteprima"
-            android:text="Cantante/Locale/Nome_Evento"
+            android:text="Cantante/Nome_Evento"
             android:textSize="20sp"
             android:fontFamily="@font/baloo"
             android:layout_marginTop="13dp"/>
         <TextView
-            android:id="@+id/citta"
+            android:id="@+id/autore"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_toRightOf="@id/img_anteprima"
             android:layout_alignTop="@+id/titolo"
-            android:layout_marginTop="30dp"
             android:layout_alignParentRight="true"
-            android:layout_toEndOf="@id/img_anteprima"
             android:layout_alignParentEnd="true"
+            android:layout_toRightOf="@+id/img_anteprima"
+            android:layout_toEndOf="@id/img_anteprima"
+            android:text="nome Locale"
+            android:textSize="18sp"
+            android:fontFamily="@font/baloo"
+            android:layout_marginTop="27dp"/>
+        <TextView
+            android:id="@+id/citta"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@id/img_anteprima"
+            android:layout_alignTop="@+id/autore"
+            android:layout_marginTop="24dp"
+            android:layout_toEndOf="@id/img_anteprima"
+            android:layout_toLeftOf="@+id/data"
+            android:layout_marginRight="30dp"
             android:textSize="16sp"
             android:fontFamily="@font/baloo"
-            android:text="Città" />
+            android:text="dd/mm/yyyy" />
 
         <TextView
-            android:id="@+id/informazione1"
+            android:id="@+id/data"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginTop="24dp"
+            android:layout_alignTop="@+id/autore"
+            android:layout_toRightOf="@+id/citta"
+            android:layout_toEndOf="@+id/citta"
+            android:layout_marginLeft="40dp"
+            android:textSize="16sp"
+            android:fontFamily="@font/baloo"
+            android:text="testoCittà"
+            android:layout_marginStart="40dp" />
+
+        <TextView
+            android:id="@+id/genere"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_toRightOf="@id/img_anteprima"
