--- a/app/src/main/res/layout/header_user.xml
+++ b/app/src/main/res/layout/header_user.xml
@@ -9,6 +9,7 @@
         android:padding="20dp">
 
         <ImageView
+            android:id="@+id/headerUser_image"
             android:layout_width="75dp"
             android:layout_height="75dp"
             android:src="@drawable/ic_launcher_background"/>
