--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -6,7 +6,7 @@
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
+    tools:context=".HomeActivity"
     android:fitsSystemWindows="true"
     tools:openDrawer="start">
 
@@ -20,8 +20,7 @@
 
         app:headerLayout="@layout/header_user"
         app:itemIconTint="@color/item_checked_unchecked"
-        app:itemTextColor="@color/item_checked_unchecked"
-        app:menu="@menu/main_menu_cantante" />
+        app:itemTextColor="@color/item_checked_unchecked" />
 
     <ScrollView
         android:layout_width="match_parent"
@@ -30,7 +29,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:context=".MainActivity">
+            tools:context=".HomeActivity">
 
             <LinearLayout
                 android:id="@+id/linearLayout2"
