--- a/app/src/main/res/layout/activity_registrazione_locale.xml
+++ b/app/src/main/res/layout/activity_registrazione_locale.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -11,277 +10,153 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:layout_margin="15dp"
-        tools:context=".RegistrazioneLocaleActivity">
+        tools:context=".signup.RegistrazioneLocaleActivity">
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="75dp"
-            android:text="CREA LOCALE"
-            android:textSize="36sp"
-            android:textColor="@color/bottone_azzurro">
-        </TextView>
+            android:fontFamily="@font/baloo"
+            android:gravity="center_horizontal"
+            android:text="Registrazione"
+            android:textColor="@color/white"
+            android:textSize="32sp"/>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginTop="5dp"
             android:orientation="vertical">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text=" proprietario"
-                android:textColor="#ffff">
-            </TextView>
+            <ImageView
+                android:id="@+id/reglocale_image"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_gravity="center"
+                android:layout_centerHorizontal="true"
+                android:src="@mipmap/profile" />
 
-            <EditText
-                android:id="@+id/editTextTextEmailAddress2"
-                android:layout_width="300dp"
-                android:layout_height="35dp"
-                android:ems="10"
-                android:textColor="@color/bottone_azzurro"
-                android:inputType="textEmailAddress" />
-        </LinearLayout>
-
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="10dp"
-            android:orientation="vertical">
-            <TextView
-                android:id="@+id/textView2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="nome locale"
-                android:textColor="#ffff"/>
-
-            <EditText
-                android:id="@+id/editTextTextEmailAddress3"
-                android:layout_width="300dp"
-                android:layout_height="35dp"
-                android:ems="10"
-                android:textColor="@color/bottone_azzurro"
-                android:inputType="textEmailAddress" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="10dp"
-            android:orientation="vertical">
-            <TextView
-                android:id="@+id/textView3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text=" telefono"
-                android:textColor="#ffff"/>
-
-            <EditText
-                android:id="@+id/editTextTextEmailAddress4"
-                android:layout_width="300dp"
-                android:layout_height="35dp"
-                android:ems="10"
-                android:inputType="textEmailAddress" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="10dp"
-            android:orientation="vertical">
-            <TextView
-                android:id="@+id/textView4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text=" città"
-                android:textColor="#ffff"/>
-
-            <EditText
-                android:id="@+id/editTextTextEmailAddress6"
-                android:layout_width="300dp"
-                android:layout_height="35dp"
-                android:ems="10"
-                android:inputType="textEmailAddress" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="10dp"
-            android:orientation="vertical">
-            <TextView
-                android:id="@+id/textView5"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text=" indirizzo"
-                android:textColor="#ffff"/>
-
-            <EditText
-                android:id="@+id/editTextTextEmailAddress15"
-                android:layout_width="300dp"
-                android:layout_height="35dp"
-                android:ems="10"
-                android:inputType="textEmailAddress" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:orientation="vertical">
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
-            <TextView
-                android:id="@+id/textView7"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text=" genere musicale/i"
-                android:textColor="#ffff" />
-
-
-                <Button
-                    android:id="@+id/btnseletedChoices"
-                    android:layout_width="150dp"
-                    android:layout_height="35dp"
-                    android:background="@drawable/costume_button"
-                    android:textColor="@color/bottone_azzurro"
-                    android:text="scegli"></Button>
-
-            </LinearLayout>
-
-            <TextView
+            <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/tvSelectedChoices"
-                android:text="scelta"
-                android:textSize="20dp"></TextView>
+                android:focusable="true"
+                android:textColorHint="@color/bottone_azzurro"
+                android:focusableInTouchMode="true">
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/reglocale_nome_locale"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/white"
+                    android:backgroundTint="@color/suddivisione_grigio"
+                    android:fontFamily="@font/baloo"
+                    android:hint="Nome del Locale"
+                    android:ems="10"
+                    android:inputType="text"
+                    android:textSize="15sp"/>
+            </com.google.android.material.textfield.TextInputLayout>
 
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:layout_marginTop="3dp"
-            android:orientation="horizontal">
-            <TextView
-                android:id="@+id/textView9"
-                android:layout_width="wrap_content"
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text=" orario apertura"
-                android:textColor="#ffff"/>
-            <Spinner
-                android:layout_width="85dp"
-                android:layout_height="match_parent"
-                android:entries="@array/orario_ap"></Spinner>
+                android:focusable="true"
+                android:textColorHint="@color/bottone_azzurro"
+                android:focusableInTouchMode="true">
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/reglocale_nome_proprietario"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/white"
+                    android:backgroundTint="@color/suddivisione_grigio"
+                    android:fontFamily="@font/baloo"
+                    android:hint="Nome del proprietario"
+                    android:ems="10"
+                    android:inputType="text"
+                    android:textSize="15sp"/>
+            </com.google.android.material.textfield.TextInputLayout>
 
-            <Spinner
-                android:layout_width="85dp"
-                android:layout_height="match_parent"
-                android:entries="@array/orario2"></Spinner>
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:orientation="horizontal">
-            <TextView
-                android:id="@+id/textView13"
-                android:layout_width="wrap_content"
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text=" orario chiusura"
-                android:textColor="#ffff"/>
-            <Spinner
-                android:layout_width="85dp"
-                android:layout_height="match_parent"
-                android:entries="@array/orario_ch"></Spinner>
-            <Spinner
-                android:layout_width="85dp"
-                android:layout_height="match_parent"
-                android:entries="@array/orario2"></Spinner>
-        </LinearLayout>
+                android:focusable="true"
+                android:textColorHint="@color/bottone_azzurro"
+                android:focusableInTouchMode="true">
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/reglocale_email"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/white"
+                    android:backgroundTint="@color/suddivisione_grigio"
+                    android:fontFamily="@font/baloo"
+                    android:hint="Email"
+                    android:ems="10"
+                    android:inputType="text"
+                    android:textSize="15sp"/>
+            </com.google.android.material.textfield.TextInputLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="10dp"
-            android:orientation="vertical">
-            <TextView
-                android:layout_width="wrap_content"
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text=" posti locale"
-                android:textColor="#ffff">
-            </TextView>
+                android:focusable="true"
+                android:textColorHint="@color/bottone_azzurro"
+                android:focusableInTouchMode="true">
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/reglocale_password"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/white"
+                    android:backgroundTint="@color/suddivisione_grigio"
+                    android:fontFamily="@font/baloo"
+                    android:hint="Password"
+                    android:ems="10"
+                    android:inputType="textPassword"
+                    android:textSize="15sp"/>
+            </com.google.android.material.textfield.TextInputLayout>
 
-            <EditText
-                android:id="@+id/editTextTextEmailAddress"
-                android:layout_width="300dp"
-                android:layout_height="35dp"
-                android:ems="10"
-                android:inputType="textEmailAddress" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="10dp"
-            android:orientation="vertical">
-                <TextView
-                android:id="@+id/textView15"
-                android:layout_width="wrap_content"
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColor="#ffff"
-                android:text=" email"/>
+                android:focusable="true"
+                android:textColorHint="@color/bottone_azzurro"
+                android:focusableInTouchMode="true">
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/reglocale_password2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/white"
+                    android:backgroundTint="@color/suddivisione_grigio"
+                    android:fontFamily="@font/baloo"
+                    android:hint="inserisci nuovamente la password"
+                    android:ems="10"
+                    android:inputType="textPassword"
+                    android:textSize="15sp"/>
+            </com.google.android.material.textfield.TextInputLayout>
 
-            <EditText
-                android:id="@+id/editTextTextEmailAddress17"
-                android:layout_width="300dp"
-                android:layout_height="35dp"
-                android:ems="10"
-                android:inputType="textEmailAddress" />
-        </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="10dp"
-            android:orientation="vertical">
-            <TextView
-                android:id="@+id/textView19"
-                android:layout_width="wrap_content"
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="password"
-                android:textColor="#ffff"/>
-
-            <EditText
-                android:id="@+id/editTextTextEmailAddress18"
-                android:layout_width="300dp"
-                android:layout_height="35dp"
-                android:ems="10"
-                android:inputType="textEmailAddress" />
-        </LinearLayout>
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="101dp">
+                android:focusable="true"
+                android:textColorHint="@color/bottone_azzurro"
+                android:focusableInTouchMode="true">
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/reglocale_indirizzo"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/white"
+                    android:backgroundTint="@color/suddivisione_grigio"
+                    android:fontFamily="@font/baloo"
+                    android:hint="Indirizzo"
+                    android:ems="10"
+                    android:inputType="text"
+                    android:textSize="15sp"/>
+            </com.google.android.material.textfield.TextInputLayout>
 
             <Button
-                android:id="@+id/button4"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@drawable/costume_button"
-                android:text="GOOOOO"
-                android:textColor="@color/bottone_azzurro"
-                android:textSize="26sp"
-
-                android:layout_margin="15dp"
-                android:layout_alignParentRight="true"/>
-
-
-        </RelativeLayout>
-
-
+                android:layout_marginTop="15dp"
+                android:id="@+id/reglocale_btn_registrati"
+                android:layout_width="175dp"
+                android:layout_height="51dp"
+                android:background="@drawable/button_style"
+                android:layout_gravity="center_horizontal"
+                android:text="Registrati"/>
+        </LinearLayout>
     </LinearLayout>
-
 </ScrollView>
