--- a/app/src/main/res/layout/activity_registrazione_user.xml
+++ b/app/src/main/res/layout/activity_registrazione_user.xml
@@ -1,34 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
+<ScrollView
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".RegistrazioneActivity"
     android:background="@color/sfondo_grigio">
 
-
     <LinearLayout
-        android:layout_marginTop="30dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginLeft="10dp"
+
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:orientation="vertical">
+        tools:context=".signup.RegistrazioneUserActivity"
+        android:orientation="vertical"
+        android:layout_margin="15sp">
 
         <TextView
-            android:layout_gravity="center"
-            android:fontFamily="@font/baloo"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="60dp"
             android:text="Registrazione"
             android:textColor="@color/white"
-            android:textSize="32sp"
-            android:layout_marginBottom="10dp"/>
+            android:fontFamily="@font/baloo"
+            android:layout_gravity="center_horizontal"
+            android:textSize="36sp"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_marginVertical="5dp">
+
+        <ImageView
+            android:id="@+id/reguser_userImage"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_gravity="center"
+            android:layout_centerHorizontal="true"
+            android:src="@mipmap/profile" />
 
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
@@ -37,7 +44,7 @@
             android:textColorHint="@color/bottone_azzurro"
             android:focusableInTouchMode="true">
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/insert_nome"
+                android:id="@+id/reguser_nome"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textColor="@color/white"
@@ -52,36 +59,17 @@
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColorHint="@color/bottone_azzurro"
             android:focusable="true"
+            android:textColorHint="@color/bottone_azzurro"
             android:focusableInTouchMode="true">
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/insert_cognome"
+                android:id="@+id/reguser_cognome"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textColor="@color/white"
+                android:backgroundTint="@color/suddivisione_grigio"
+                android:fontFamily="@font/baloo"
                 android:hint="Cognome"
-                android:textColor="@color/white"
-                android:backgroundTint="@color/suddivisione_grigio"
-                android:ems="10"
-                android:inputType="text"
-                android:fontFamily="@font/baloo"
-                android:textSize="15sp"/>
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:focusable="true"
-            android:textColorHint="@color/bottone_azzurro"
-            android:focusableInTouchMode="true">
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/insert_nickname"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textColor="@color/white"
-                android:backgroundTint="@color/suddivisione_grigio"
-                android:fontFamily="@font/baloo"
-                android:hint="Nickname"
                 android:ems="10"
                 android:inputType="text"
                 android:textSize="15sp"/>
@@ -94,33 +82,51 @@
             android:textColorHint="@color/bottone_azzurro"
             android:focusableInTouchMode="true">
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/insert_email"
+                android:id="@+id/reguser_username"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textColor="@color/white"
+                android:backgroundTint="@color/suddivisione_grigio"
+                android:fontFamily="@font/baloo"
+                android:hint="Username"
+                android:ems="10"
+                android:inputType="text"
+                android:textSize="15sp"/>
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:focusable="true"
+            android:textColorHint="@color/bottone_azzurro"
+            android:focusableInTouchMode="true">
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/reguser_email"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="@color/white"
+                android:backgroundTint="@color/suddivisione_grigio"
+                android:fontFamily="@font/baloo"
                 android:hint="Email"
-                android:textColor="@color/white"
-                android:backgroundTint="@color/suddivisione_grigio"
                 android:ems="10"
                 android:inputType="text"
-                android:fontFamily="@font/baloo"
                 android:textSize="15sp"/>
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
-
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:focusable="true"
             android:textColorHint="@color/bottone_azzurro"
             android:focusableInTouchMode="true">
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/insert_password"
+                android:id="@+id/reguser_password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/baloo"
                 android:textColor="@color/white"
+                android:backgroundTint="@color/suddivisione_grigio"
+                android:fontFamily="@font/baloo"
                 android:hint="Password"
-                android:backgroundTint="@color/suddivisione_grigio"
                 android:ems="10"
                 android:inputType="textPassword"
                 android:textSize="15sp"/>
@@ -133,60 +139,69 @@
             android:textColorHint="@color/bottone_azzurro"
             android:focusableInTouchMode="true">
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/conferma_password"
+                android:id="@+id/reguser_password2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textColor="@color/white"
-                android:hint="Conferma Password"
                 android:backgroundTint="@color/suddivisione_grigio"
+                android:fontFamily="@font/baloo"
+                android:hint="Reinserisci Password"
                 android:ems="10"
                 android:inputType="textPassword"
-                android:fontFamily="@font/baloo"
                 android:textSize="15sp"/>
         </com.google.android.material.textfield.TextInputLayout>
 
-        <RadioGroup
-            android:id="@+id/radioGenere"
+        <TextView
+            android:id="@+id/textView14"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Data:"
+            android:textColor="@color/white"
+            android:textSize="16sp"
+            android:fontFamily="@font/baloo"/>
+
+        <TextView
+            android:id="@+id/reguser_dataNascita"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginTop="10dp">
-            <TextView
-                android:textColor="@color/bottone_azzurro"
-                android:fontFamily="@font/baloo"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="15sp"
-                android:text="Genere:"/>
-            <RadioButton
-                android:id="@+id/radioMaschio"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Maschio"
-                android:textColor="@color/white"
-                android:layout_marginLeft="10dp"
-                android:textSize="15sp"/>
+            android:layout_weight="1"
+            android:ems="10"
+            android:textColor="@color/bottone_azzurro"
+            android:textSize="16sp"
+            android:layout_marginLeft="30dp"
+            android:text="Seleziona la tua Data di Nascita"/>
 
-            <RadioButton
-                android:id="@+id/radioFemmina"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Femmina"
-                android:textColor="@color/white"
-                android:layout_marginLeft="10dp"
-                android:textSize="15sp"/>
+        <TextView
+            android:id="@+id/reguser_artista"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Sei un artista?"
+            android:textColor="@color/white"
+            android:textSize="16sp"
+            android:fontFamily="@font/baloo"/>
 
-        </RadioGroup>
+        <TextView
+            android:id="@+id/reguser_seleziona_tipo"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:ems="10"
+            android:textColor="@color/bottone_azzurro"
+            android:textSize="16sp"
+            android:layout_marginLeft="30dp"
+            android:text="No"/>
 
         <Button
-            android:id="@+id/registra"
-            android:layout_gravity="center"
+            android:id="@+id/reguser_btn_registrati"
             android:layout_width="175dp"
             android:layout_height="51dp"
             android:background="@drawable/button_style"
             android:text="Registrati"
-            android:layout_margin="15dp"
-            android:layout_alignParentRight="true"/>
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="15dp"/>
 
+        </LinearLayout>
     </LinearLayout>
-</androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
